# mc-modslurp

./: Cargo.toml  mc-1-20-1.toml  mc-storyteller-1-20-1.toml
src/: main.rs  mc-1-20-1.toml
