[package]
name = "mc-modslurp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_toml = "0.0.1"
sevenz-rust = "0.6.1"
toml = "0.8.15"
